-solved issue 2281 "Change orientation in Welkome wizard"
-strings.xml fix

-little layout fixes

add fdroid aditional fdroid styles

Fix wrong error message when sharing a file with same user as the active account

add missing import

Hide local search in file preview and detail modes

amend comments regarding changes in login button visibility

Fix no error when no connection in private share

Fix cancel button label incorrect when selecting path for camera uploads

Fix Paste text does not work

Allow uploads from external apps

Fix Downloads and uploads are not properly resumed from background, app crashes

Update library reference

Use user id in LDAP requests

Use LDAP user ids when creating local files

Get rid of old ant tests in library

Fix remote path from url with usernames containing spaces

Get rid of unused translations

Android Studio 3.2.1

Get rid of old libraries dependencies

Update setup information

Include out of date branch screenshot

[tx] updated from transifex

--- a/res/values-ca/strings.xml
+++ b/res/values-ca/strings.xml
@@ -499,6 +499,7 @@
     <item quantity="other">%d seleccionats</item>
   </plurals>
   <!--Welcome to oC intro features-->
+  <string name="welcome_feature_skip_button">Ometre</string>
   <string name="welcome_feature_1_title">Gestioneu tots els arxius sincronitzats</string>
   <string name="welcome_feature_1_text">Pots copiar, moure, borrar</string>
   <string name="welcome_feature_2_title">Comparteix fitxers i carpetes</string>
