--- a/res/values-sl/strings.xml
+++ b/res/values-sl/strings.xml
@@ -465,6 +465,7 @@
     <item quantity="other">%d izbranih</item>
   </plurals>
   <!--Welcome to oC intro features-->
+  <string name="welcome_feature_skip_button">Preskoči</string>
   <string name="welcome_feature_4_title">Pošiljanje posnetkov s kamero</string>
   <string name="welcome_feature_7_title">izberi vse</string>
   <string name="welcome_feature_8_title">Na voljo za rabo brez povezave</string>
