--- a/res/values-sv/strings.xml
+++ b/res/values-sv/strings.xml
@@ -443,6 +443,7 @@
     <item quantity="other">%d valda</item>
   </plurals>
   <!--Welcome to oC intro features-->
+  <string name="welcome_feature_skip_button">Hoppa över</string>
   <string name="welcome_feature_7_title">Välj allt</string>
   <string name="welcome_feature_8_title">Tillgänglig offline</string>
 </resources>
