--- a/res/values-de-rDE/strings.xml
+++ b/res/values-de-rDE/strings.xml
@@ -517,6 +517,7 @@
     <item quantity="other">%d ausgewählt</item>
   </plurals>
   <!--Welcome to oC intro features-->
+  <string name="welcome_feature_skip_button">Überspringen</string>
   <string name="welcome_feature_1_title">Verwalten Sie all Ihre synchronisierten Dateien</string>
   <string name="welcome_feature_1_text">Sie können kopieren, verschieben, löschen</string>
   <string name="welcome_feature_2_title">Dateien und Ordner teilen</string>
