--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -518,6 +518,7 @@
     <item quantity="other">%d seleccionado</item>
   </plurals>
   <!--Welcome to oC intro features-->
+  <string name="welcome_feature_skip_button">Omitir</string>
   <string name="welcome_feature_1_title">Administra todos tus archivos sincronizados</string>
   <string name="welcome_feature_1_text">Puedes copiar, mover y eliminar</string>
   <string name="welcome_feature_2_title">Compartir archivos y carpetas</string>
@@ -528,7 +529,11 @@
   <string name="welcome_feature_4_text">Tus fotografías/vídeos automáticamente se subirán</string>
   <string name="welcome_feature_5_title">Retransmitir video</string>
   <string name="welcome_feature_5_text">Reproduce tus videos sin descargarlos</string>
+  <string name="welcome_feature_6_title">Buscar en la actual carpeta</string>
+  <string name="welcome_feature_6_text">Filtrar archivos por su nombre</string>
   <string name="welcome_feature_7_title">Seleccionar todo</string>
+  <string name="welcome_feature_7_text">Seleccione todos sus archivos de una vez</string>
   <string name="welcome_feature_8_title">Disponible offline</string>
+  <string name="welcome_feature_8_text">Sus archivos sincronizados automáticamente</string>
   <string name="no_borwser_installed_alert">No hay un navegador instalado, Por favor, instale uno para poder realizar un login seguro</string>
 </resources>
