--- a/res/values-fi-rFI/strings.xml
+++ b/res/values-fi-rFI/strings.xml
@@ -476,6 +476,7 @@
     <item quantity="other">%d valittu</item>
   </plurals>
   <!--Welcome to oC intro features-->
+  <string name="welcome_feature_skip_button">Ohita</string>
   <string name="welcome_feature_1_title">Hallitse kaikkia synkronoituja tiedostojasi</string>
   <string name="welcome_feature_1_text">Voit kopioida siirtää ja poistaa</string>
   <string name="welcome_feature_2_title">Jaa tiedostoja ja kansioita</string>
