--- a/res/values-he/strings.xml
+++ b/res/values-he/strings.xml
@@ -478,6 +478,7 @@
     <item quantity="other">נבחרו %d</item>
   </plurals>
   <!--Welcome to oC intro features-->
+  <string name="welcome_feature_skip_button">דלוג</string>
   <string name="welcome_feature_4_title">העלאות מהמצלמה</string>
   <string name="welcome_feature_7_title">לבחור הכול</string>
   <string name="welcome_feature_8_title">זמין במצב לא מקוון</string>
