--- a/res/values-ko/strings.xml
+++ b/res/values-ko/strings.xml
@@ -483,6 +483,7 @@
     <item quantity="other">%d개 선택됨</item>
   </plurals>
   <!--Welcome to oC intro features-->
+  <string name="welcome_feature_skip_button">건너뛰기</string>
   <string name="welcome_feature_4_title">카메라 업로드</string>
   <string name="welcome_feature_5_title">비디오 스트리밍</string>
   <string name="welcome_feature_7_title">모두 선택</string>
