--- a/res/values-lt-rLT/strings.xml
+++ b/res/values-lt-rLT/strings.xml
@@ -499,6 +499,7 @@
   <string name="button_later_name">VĖLIAU</string>
   <string name="button_rate_now_name">ĮVERTINTI</string>
   <!--Welcome to oC intro features-->
+  <string name="welcome_feature_skip_button">Praleisti</string>
   <string name="welcome_feature_4_title">Nuotraukų įkėlimai</string>
   <string name="welcome_feature_7_title">Pažymėti viską</string>
   <string name="welcome_feature_8_title">Pasiekiamas neprisijungus</string>
