--- a/res/values-sq/strings.xml
+++ b/res/values-sq/strings.xml
@@ -517,6 +517,7 @@
     <item quantity="other">%d të përzgjedhur</item>
   </plurals>
   <!--Welcome to oC intro features-->
+  <string name="welcome_feature_skip_button">Anashkalojeni</string>
   <string name="welcome_feature_1_title">Administroni krejt kartelat tuaja të njëkohësuara</string>
   <string name="welcome_feature_1_text">Mund të kopjoni, lëvizni, fshini</string>
   <string name="welcome_feature_2_title">Ndani me të tjerët kartela dhe dosje</string>
@@ -527,7 +528,11 @@
   <string name="welcome_feature_4_text">Fotot/videot tuaja të ngarkuara automatikisht</string>
   <string name="welcome_feature_5_title">Transmetim videosh</string>
   <string name="welcome_feature_5_text">Luajini videot tuaja pa i shkarkuar</string>
+  <string name="welcome_feature_6_title">Kërko në dosjen e tanishme</string>
+  <string name="welcome_feature_6_text">Filtrojini kartelat tuaja sipas emrash</string>
   <string name="welcome_feature_7_title">Përzgjidhi krejt</string>
+  <string name="welcome_feature_7_text">Përzgjidhini krejt kartelat njëherësh</string>
   <string name="welcome_feature_8_title">I passhëm jo në linjë</string>
+  <string name="welcome_feature_8_text">Kartelat tuaja u njëkohësuan vetvetiu</string>
   <string name="no_borwser_installed_alert">S’ka shfletues të instaluar. Ju lutemi, instaloni një Shfletues, që të mund të lejohet hyrje e sigurt.</string>
 </resources>
