--- a/res/values-th-rTH/strings.xml
+++ b/res/values-th-rTH/strings.xml
@@ -333,6 +333,7 @@
   <string name="confirmation_disable_pictures_upload_message">ต้องการปิดใช้งานคุณลักษณะนี้? รูปภาพที่ค้างอยู่จะไม่ถูกอัพโหลด</string>
   <string name="confirmation_disable_videos_upload_message">ต้องการปิดใช้งานคุณลักษณะนี้? วีดีโอที่ค้างอยู่จะไม่ถูกอัพโหลด</string>
   <string name="conflict_title">ไฟล์ที่มีปัญหา</string>
+  <string name="conflict_description">แตะเพื่อแก้ปัญหาไฟล์ %1$s</string>
   <string name="conflict_message">ไฟล์ใดที่คุณต้องการที่จะเก็บ? เลือกวางทับไฟล์เดิมหรือ เขียนไฟล์ใหม่จะเพิ่มตัวเลขไปยังชื่อของมัน</string>
   <string name="conflict_keep_both">เก็บไว้ทั้งสองอย่าง</string>
   <string name="conflict_use_local_version">เวอร์ชันต้นทาง</string>
@@ -515,6 +516,7 @@
     <item quantity="other">%d รายการที่ถูกเลือก</item>
   </plurals>
   <!--Welcome to oC intro features-->
+  <string name="welcome_feature_skip_button">ข้าม</string>
   <string name="welcome_feature_1_title">จัดการไฟล์ประสานข้อมูลทั้งหมดของคุณ</string>
   <string name="welcome_feature_1_text">คุณสามารถคัดลอก ย้าย หรือลบได้</string>
   <string name="welcome_feature_2_title">แชร์ไฟล์และโฟลเดอร์</string>
@@ -525,7 +527,11 @@
   <string name="welcome_feature_4_text">รูปภาพ/วิดีโอ ของคุณถูกอัพโหลดโดยอัตโนมัติแล้ว</string>
   <string name="welcome_feature_5_title">กำลังสตรีมวิดีโอ</string>
   <string name="welcome_feature_5_text">เล่นวิดีโอของคุณโดยไม่ต้องดาวน์โหลด</string>
+  <string name="welcome_feature_6_title">ค้นหาในโฟลเดอร์ปัจจุบัน</string>
+  <string name="welcome_feature_6_text">เรียงตามชื่อ</string>
   <string name="welcome_feature_7_title">เลือกทั้งหมด</string>
+  <string name="welcome_feature_7_text">เลือกไฟล์ทั้งหมด</string>
   <string name="welcome_feature_8_title">การทำงานแบบออฟไลน์พร้อมใช้งาน</string>
+  <string name="welcome_feature_8_text">ประสานข้อมูลไฟล์ของคุณโดยอัตโนมัติ</string>
   <string name="no_borwser_installed_alert">โปรดติดตั้งเบราเซอร์ก่อนเพื่อให้สามารถล็อกอินได้อย่างปลอดภัย</string>
 </resources>
