--- a/res/values-tr/strings.xml
+++ b/res/values-tr/strings.xml
@@ -424,6 +424,7 @@
     <item quantity="other">%d seçili</item>
   </plurals>
   <!--Welcome to oC intro features-->
+  <string name="welcome_feature_skip_button">Atla</string>
   <string name="welcome_feature_7_title">Tümünü seç</string>
   <string name="welcome_feature_8_title">Çevrimdışı kullanılabilir</string>
 </resources>
