--- a/owncloudApp/src/main/res/values/strings.xml
+++ b/owncloudApp/src/main/res/values/strings.xml
@@ -19,6 +19,7 @@
     <string name="actionbar_sort_by_date">Oldest - Newest</string>
     <string name="actionbar_sort_by_size">Smallest - Largest</string>
     <string name="drawer_item_all_files">All files</string>
+    <string name="drawer_item_shared_by_link">Shared by link</string>
     <string name="drawer_item_settings">Settings</string>
     <string name="drawer_item_uploads_list">Uploads</string>
     <string name="drawer_close">Close</string>
@@ -72,6 +73,8 @@
     <string name="pattern_no_longer_required">The pattern will not be asked anymore</string>
     <string name="pattern_configure_your_pattern_explanation">The pattern will be requested every time the app is started</string>
     <string name="illegal_argument_exception_message">A valid ACTION is needed in the Intent passed to</string>
+
+    <string name="no_public_shares">No public shares</string>
 
     <string name="recommend_subject">Try %1$s on your smartphone!</string>
     <string name="recommend_text">"I want to invite you to use %1$s on your smartphone!\nDownload here: %2$s"</string>
